syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

option go_package = "./pb";

service UserService {
  rpc GetUsers(GetUsersReq) returns (GetUsersRes) {}
}

message GetUsersReq {
  string uid = 1;
}

message GetUsersRes {
  repeated User users = 1;
}

message User {
  string uid = 1;
  string email = 2;
  string last_name = 3;
  string first_name = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  string gender = 7;
}
